[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/sprites/enemy_floating_skull.png" type="Texture" id=1]
[ext_resource path="res://objects/enemies/FloatingSkull.gd" type="Script" id=2]
[ext_resource path="res://objects/HitboxEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.37656

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "disable_collisions"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]
length = 1.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "pre_show"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "disable_collisions"
} ]
}

[sub_resource type="Animation" id=5]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 1.9, 2.1, 2.6, 3.1, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 17, 16, 17, 16, 14, 12, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.8, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "disable_collisions"
}, {
"args": [  ],
"method": "start_chase"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "fly"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "pre_show"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "show_skull"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachine" id=15]
states/dead/node = SubResource( 6 )
states/dead/position = Vector2( 665, 112 )
states/fly/node = SubResource( 7 )
states/fly/position = Vector2( 411, 190 )
states/pre_show/node = SubResource( 8 )
states/pre_show/position = Vector2( 211, 29 )
states/show_skull/node = SubResource( 9 )
states/show_skull/position = Vector2( 118, 132 )
transitions = [ "fly", "dead", SubResource( 10 ), "show_skull", "fly", SubResource( 11 ), "fly", "show_skull", SubResource( 12 ), "dead", "show_skull", SubResource( 13 ), "pre_show", "show_skull", SubResource( 14 ) ]
start_node = "pre_show"
end_node = "dead"
graph_offset = Vector2( 0, -20.636 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[sub_resource type="CircleShape2D" id=17]
radius = 11.6711

[sub_resource type="CircleShape2D" id=18]
radius = 11.5221

[node name="FloatingSkull" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 19
frame = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 2 )
anims/fly = SubResource( 3 )
anims/pre_show = SubResource( 4 )
anims/show_skull = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
process_mode = 0
parameters/playback = SubResource( 16 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerHurt" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
__meta__ = {
"_editor_description_": "activado al ser herido, mientras esté activo no podrá ser herido"
}

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.376618, 0.377755 )
scale = Vector2( 1.26951, 1.28055 )
process_parent = true
physics_process_parent = true

[node name="Area2DDetectPlayer" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDetectPlayer"]
shape = SubResource( 17 )

[node name="HitboxEnemy" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxEnemy"]
shape = SubResource( 18 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="body_entered" from="Area2DDetectPlayer" to="." method="_on_collision_with_player"]
